<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title="Settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/timing"
                android:title="@string/menu1" />
            <item
                android:id="@+id/sounds"
                android:title="@string/menu2" />
            <item
                android:id="@+id/accelerometer"
                android:title="@string/settings3" />
        </menu>
    </item>

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_action_name"
        android:title="@string/icon_help_cd"
        app:showAsAction="ifRoom" />


</menu>