<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_track"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/start_btn"
        style="@style/ButtonText"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/fab"
        android:contentDescription="@string/icon_help_cd"
        android:text="@string/frag1" />

    <TextView
        android:id="@+id/stop_btn"
        style="@style/StopText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/stop_box"
        android:text="@string/stop"
        android:textSize="26sp" />

    <Button
        android:id="@+id/reaction_btn"
        style="@style/StopText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/stop_box"
        android:text="@string/reaction"
        android:textAllCaps="true"

        android:textSize="26sp" />


</LinearLayout>
