<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:contentDescription="@string/icon_help_cd"
        android:scaleType="centerCrop"
        android:src="@drawable/blue_track" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:alpha="1"
            android:background="@color/color3x"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/color3"
                android:orientation="vertical">

                <TextView
                    style="@style/settings_TV_time_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:textSize="28sp"
                    android:text="@string/recorder"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/record_btn"
                        style="@style/RecorderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_weight="1.1"
                        android:background="@drawable/stop_box"
                        android:gravity="center"
                        android:text="@string/record"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/record_stop_btn"
                        style="@style/RecorderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:background="@drawable/stop_box"
                        android:gravity="center"
                        android:text="@string/stop"

                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/audio_name"
                        style="@style/settings_TV_time_editor"
                        android:background="@drawable/settings_secondary_boxes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_weight="1"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/record_save_btn"
                        style="@style/RecorderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/stop_box"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textSize="20sp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/color3"
                android:orientation="vertical">


                <TextView
                    style="@style/settings_TV_time_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:textSize="28sp"
                    android:text="@string/player"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/play_btn"
                        style="@style/RecorderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_weight="1.1"
                        android:background="@drawable/stop_box"
                        android:gravity="center"
                        android:text="@string/play"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/play_stop_btn"
                        style="@style/RecorderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:background="@drawable/stop_box"
                        android:gravity="center"
                        android:text="@string/stop"

                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>